<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SplashActivity"
    android:background="@color/app_bg_morning">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_morning"
        android:adjustViewBounds="true"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/Common.spacing_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_title_reason_ask_permission"
            style="@style/Common.text_title.light"/>

        <TextView
            android:id="@+id/textView_Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_reason_ask_permission"
            style="@style/Common.text_body.light"
            android:layout_marginTop="@dimen/Common.spacing_medium"
            app:layout_constraintTop_toBottomOf="@+id/textView_Title"/>

        <Button
            android:id="@+id/button_Grant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_grant_permission"
            android:layout_marginTop="@dimen/Common.spacing_large"
            app:layout_constraintTop_toBottomOf="@id/textView_Message"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/button_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>